add activity log storage

--- a/openai_service_test.ipynb
+++ b/openai_service_test.ipynb
@@ -108,17 +108,6 @@
     "def get_system_message(user):\n",
     "    return SystemMessage(action_prompts[user.day])\n",
     "\n",
-    "def update_user_data(user_data: UserData, user_query: str):\n",
-    "    user_data_parser = PydanticOutputParser(pydantic_object=UserData)\n",
-    "    user_data_prompt = PromptTemplate(\n",
-    "        template=\"Extract the user data based on these instructions: \\n{format_instructions}\\n Those are the given information: {query}\\n Those are the existing data: {existing_data}\",\n",
-    "        input_variables=[\"query\", \"existing_data\"],\n",
-    "        partial_variables={\"format_instructions\": user_data_parser.get_format_instructions()},\n",
-    "    )\n",
-    "    user_data_chain = user_data_prompt | model | user_data_parser\n",
-    "    updated_user_data = user_data_chain.invoke({\"query\": user_query, \"existing_data\": user_data.dict()})\n",
-    "    return updated_user_data\n",
-    "\n",
     "def send_daily_message(wa_id):\n",
     "    user = get_user(wa_id)\n",
     "    user.day += 1\n",
@@ -130,9 +119,44 @@
     "    user.messages.append(reply_message)\n",
     "    \n",
     "    update_user(wa_id, user)\n",
-    "    print(\"FitChat: \", reply_message.base_message.content)\n",
-    "    \n",
-    "    \n",
+    "    print(\"FitChat: \", reply_message.base_message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_user_data(user_data: UserData, user_query: str):\n",
+    "    user_data_parser = PydanticOutputParser(pydantic_object=UserData)\n",
+    "    user_data_prompt = PromptTemplate(\n",
+    "        template=\"Extract the user data based on these instructions: \\n{format_instructions}\\n Those are the given information: {query}\\n Those are the existing data: {existing_data}\",\n",
+    "        input_variables=[\"query\", \"existing_data\"],\n",
+    "        partial_variables={\"format_instructions\": user_data_parser.get_format_instructions()},\n",
+    "    )\n",
+    "    user_data_chain = user_data_prompt | model | user_data_parser\n",
+    "    updated_user_data = user_data_chain.invoke({\"query\": user_query, \"existing_data\": user_data.dict()})\n",
+    "    return updated_user_data\n",
+    "\n",
+    "def update_activity_log(activity_log: ActivityLog, activity_query: str):\n",
+    "    activity_log_parser = PydanticOutputParser(pydantic_object=ActivityLog)\n",
+    "    activity_log_prompt = PromptTemplate(\n",
+    "        template=\"Extract the activity log based on these instructions: \\n{format_instructions}\\n Those are the given information: {query}\\n Those are the existing data: {existing_data}\",\n",
+    "        input_variables=[\"query\", \"existing_data\"],\n",
+    "        partial_variables={\"format_instructions\": activity_log_parser.get_format_instructions()},\n",
+    "    )\n",
+    "    activity_log_chain = activity_log_prompt | model | activity_log_parser\n",
+    "    updated_activity_log = activity_log_chain.invoke({\"query\": activity_query, \"existing_data\": activity_log.dict()})\n",
+    "    return updated_activity_log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def process_message(message, wa_id):\n",
     "    if message == \"reset\":\n",
     "        kv.set(wa_id, None)\n",
@@ -152,27 +176,40 @@
     "    \n",
     "    user.messages.append(user_message)\n",
     "    user.messages.append(reply_message)\n",
-    "    user.user_data = update_user_data(user.user_data, user_message.base_message.content)\n",
-    "    \n",
-    "    update_user(wa_id, user)\n",
     "    \n",
     "    print(\"User: \", user_message.base_message.content)\n",
     "    print(\"FitChat: \", reply_message.base_message.content)\n",
-    "    print(\"User data: \", user.user_data.dict())"
+    "    \n",
+    "    if user.day == 0:\n",
+    "        user.user_data = update_user_data(user.user_data, user_message.base_message.content)\n",
+    "        print(\"User data: \", user.user_data.dict())\n",
+    "\n",
+    "    else:\n",
+    "        if not user.activity_logs or user.activity_logs[-1] is None or user.activity_logs[-1].date.date() != datetime.now().date():\n",
+    "            new_activity_log = ActivityLog(date=datetime.now())\n",
+    "            user.activity_logs.append(update_activity_log(new_activity_log, user_message.base_message.content))\n",
+    "        else:\n",
+    "            user.activity_logs[-1] = update_activity_log(user.activity_logs[-1], user_message.base_message.content)\n",
+    "        print(\"Activity logs: \", [activity_log.dict() for activity_log in user.activity_logs])\n",
+    "        \n",
+    "    update_user(wa_id, user)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User data:  {'first_name': None, 'age': None, 'gender': None, 'height': None}\n",
       "User:  Hiii\n",
-      "FitChat:  Hey! 😊 How's it going? Are you already tracking your steps?\n",
-      "User data:  {'first_name': None, 'age': None, 'gender': None, 'height': None}\n"
+      "FitChat:  Hey there! 🌟 Are you currently tracking your steps?\n",
+      "User data:  {'first_name': None, 'age': None, 'gender': None, 'height': None}\n",
+      "User:  Yes, im tracking my steps\n",
+      "FitChat:  Awesome! What's your name? 😊\n"
      ]
     }
    ],
@@ -183,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User data:  {'first_name': 'Yves', 'age': None, 'gender': None, 'height': None}\n",
       "User:  Im Yves \n",
-      "FitChat:  Nice to meet you, Yves! How old are you?\n",
-      "User data:  {'first_name': 'Yves', 'age': None, 'gender': None, 'height': None}\n"
+      "FitChat:  Nice to meet you, Yves! How old are you?\n"
      ]
     }
    ],
@@ -202,16 +239,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': None, 'height': None}\n",
       "User:  I am 25 years old\n",
-      "FitChat:  Cool! What's your height, Yves? And are you male or female?\n",
-      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': None, 'height': None}\n"
+      "FitChat:  Cool! And what's your gender and height, Yves?\n"
      ]
     }
    ],
@@ -221,16 +258,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'man', 'height': None}\n",
       "User:  I am a man\n",
-      "FitChat:  Got it, thanks! And your height?\n",
-      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'man', 'height': None}\n"
+      "FitChat:  Got it! And your height?\n"
      ]
     }
    ],
@@ -240,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'man', 'height': 185}\n",
       "User:  185cm\n",
-      "FitChat:  Perfect, Yves! I'll check in with you tomorrow. Any questions for now? 💬\n",
-      "User data:  {'first_name': 'Yves', 'age': '25', 'gender': 'man', 'height': 185}\n"
+      "FitChat:  Perfect, thanks Yves! I'll check in with you tomorrow. Any questions for now? 😊\n"
      ]
     }
    ],
@@ -259,14 +296,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FitChat:  Perfect, Yves! So, how many steps did you take yesterday? 🚶‍♂️\n"
+      "FitChat:  Perfect, thanks Yves! 💪 How many steps did you take yesterday?\n",
+      "Activity logs:  [{'calories': None, 'steps': 10000, 'weight': None, 'protein': None}]\n",
+      "User:  I did 10k steps\n",
+      "FitChat:  Nice job, Yves! 10k steps is awesome! 🚶‍♂️🔥 Keep it up! What’s the plan for today?\n"
      ]
     }
    ],
@@ -277,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -285,11 +325,20 @@
      "output_type": "stream",
      "text": [
       "Hiii\n",
-      "Hello! Are you currently tracking your steps?\n",
+      "Hey there! 🌟 Are you currently tracking your steps?\n",
       "Yes, im tracking my steps\n",
-      "Great! What's your first name?\n",
+      "Awesome! What's your name? 😊\n",
       "Im Yves \n",
-      "Nice to meet you, Yves! How old are you?\n"
+      "Nice to meet you, Yves! How old are you?\n",
+      "I am 25 years old\n",
+      "Cool! And what's your gender and height, Yves?\n",
+      "I am a man\n",
+      "Got it! And your height?\n",
+      "185cm\n",
+      "Perfect, thanks Yves! I'll check in with you tomorrow. Any questions for now? 😊\n",
+      "Perfect, thanks Yves! 💪 How many steps did you take yesterday?\n",
+      "I did 10k steps\n",
+      "Nice job, Yves! 10k steps is awesome! 🚶‍♂️🔥 Keep it up! What’s the plan for today?\n"
      ]
     }
    ],
